--- a/.gitignore
+++ b/.gitignore
@@ -17,11 +17,16 @@
 /coverage
 
 # next.js
-/.next/
+.next/
 /out/
+/build/
+.esa-build/
 
-# production
-/build
+# turbopack
+.turbo/
+
+# swc cache
+.swc/
 
 # misc
 .DS_Store
@@ -32,9 +37,14 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 .pnpm-debug.log*
+*.log
 
 # env files (can opt-in for committing if needed)
 .env*
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
 # vercel
 .vercel
